--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
   "manifest_version": 2,
-  "name": "Getting started example",
-  "description": "This extension shows a Google Image search result for the current page",
+  "name": "Safe Sight",
+  "description": "Enabling you to browse through the internet, toxicity safely.",
   "version": "1.0",
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_title": "Safe-Sight"
   },
-  "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
-  ]
+    
+"icons": { "16": "icon.png",
+           "48": "icon.png",
+          "128": "icon.png" }
+  
 }
