--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,15 @@
   "name": "Safe Sight",
   "description": "Enabling you to browse through the internet, toxicity safely.",
   "version": "1.0",
-
+  "background":{
+    "page":"bg.html"
+  },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
     "default_title": "Safe-Sight"
   },
+  "js": ["popup.js"]
     
 "icons": { "16": "icon.png",
            "48": "icon.png",
