--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "default_popup": "popup.html",
     "default_title": "Safe-Sight"
   },
-  "js": ["popup.js"]
+  "js": ["popup.js"],
     
 "icons": { "16": "icon.png",
            "48": "icon.png",
