--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,12 @@
   "background":{
     "page":"bg.html"
   },
+  "chrome_url_overrides": {
+        "newtab": "my.html"
+    },
+    "permissions": [
+        "tabs"
+    ],
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
